chore(core): improve (some) tests